Regenerate with updated jextract
Double check that there are no hidden changes.